prepare for ABS

--- a/trunk/project.properties
+++ b/trunk/project.properties
@@ -11,5 +11,6 @@
 target=android-17
 android.library.reference.1=thirdparty/NumberPicker
 android.library.reference.2=thirdparty/DragSortListView
+#android.library.reference.3=thirdparty/ActionBarSherlock
 
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
