converted DrugListActivity to ABS

--- a/branches/actionbarsherlock/project.properties
+++ b/branches/actionbarsherlock/project.properties
@@ -14,3 +14,4 @@ android.library.reference.2=thirdparty/DragSortListView
 #android.library.reference.3=thirdparty/ActionBarSherlock
 
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+android.library.reference.3=thirdparty/ActionBarSherlock
