added missing export

--- a/branches/actionbarsherlock/.classpath
+++ b/branches/actionbarsherlock/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/NumberPicker"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/DragSortListView"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ActionBarSherlock"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
