--- a/branches/holoeverywhere/.classpath
+++ b/branches/holoeverywhere/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/DragSortListView"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ActionBarSherlock"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/HoloEverywhere"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
