Disabled dark theme; fixed DrugNamePreference issue on small screens; renamed NumberPickerWrapper method to match its >= HC equivalent

--- a/branches/actionbarsherlock/AndroidManifest.xml
+++ b/branches/actionbarsherlock/AndroidManifest.xml
@@ -54,7 +54,7 @@
 
 		<activity android:name=".DrugEditActivity"
 		    android:exported="false"
-		    android:windowSoftInputMode="adjustResize"		    
+		    android:windowSoftInputMode="adjustPan"		    
 			android:launchMode="singleTop"
 		    android:configChanges="orientation|screenSize|keyboardHidden"
 		>	    
