--- a/branches/actionbarsherlock/AndroidManifest.xml
+++ b/branches/actionbarsherlock/AndroidManifest.xml
@@ -18,7 +18,8 @@
 	    android:label="@string/app_name"
 	    android:name=".RxDroid" android:allowBackup="true"
 		android:backupAgent=".BackupAgent"
-	android:killAfterRestore="true" android:restoreAnyVersion="false">
+		android:theme="@style/Theme.RxDroid"
+		android:killAfterRestore="true" android:restoreAnyVersion="false">
 
 		<meta-data android:name="com.google.android.backup.api_key"
 			android:value="AEdPqrEAAAAItIxwJIR2ke6APuwW_W08I3iBMThG3j_Ptg1-dA" 
@@ -27,7 +28,7 @@
 		<activity android:name=".SplashScreenActivity"
 			android:label="@string/app_name"
 			android:configChanges="orientation|screenSize|keyboardHidden"
-			android:theme="@style/DefaultTheme.NoAnimation"
+			android:theme="@style/Theme.RxDroid.NoAnimation"
 			android:launchMode="singleTop"
 		>
 		
